# Delegates

./: .gitignore
Delegates/: CMakeLists.txt  Delegates.cpp  Delegates.h
Delegates/DelegateTemplate/: CMakeLists.txt  Dispatcher.h  FunctionDispatcher.h
Delegates/VerySimpleDelegate/: Delegate.h
